welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {if (vuBiscuit()=true) {
^Program:6: error: Missing closing brace `}' assumed here
}
^Program:7: error: expected class or object definition
{[!]
^